changed position to fixed, set top to 0 and z-index 1

--- a/client/src/styles/Nav.scss
+++ b/client/src/styles/Nav.scss
@@ -1,7 +1,8 @@
 .nav-bar {
-  // position: fixed;
-  // width: 100%;
-  // top: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  top: 0;
 
   color: #ffffff;
   display: flex;
